# X11HelloWorld

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml  ubuntu.yml
src/x11hw/: context.cpp  context.hpp  error.hpp  geometry.cpp  geometry.hpp  main.cpp  shader.cpp  shader.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
